force-app/main/default/objects/Items_Google_Drive_Test_Data_Source__x/Items_Google_Drive_Test_Data_Source__x.object-meta.xml
<CustomObject>
    <externalDataSource>Google_Drive_Test_Data_Source</externalDataSource>
    <externalName>items_Google_Drive_Test_Data_Source</externalName>
    <label>Items_Google_Drive_Test_Data_Source</label>
    <pluralLabel>Items_Google_Drive_Test_Data_Source</pluralLabel>
</CustomObject>