force-app/main/default/objects/Items_Google_Drive_Test_Data_Source__x/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <externalDeveloperName>Author</externalDeveloperName>
    <label>Author</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>