force-app/main/default/objects/Items_Google_Drive_Test_Data_Source__x/fields/ContentLength__c.field-meta.xml
<CustomField>
    <fullName>ContentLength__c</fullName>
    <externalDeveloperName>ContentLength</externalDeveloperName>
    <label>ContentLength</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>