force-app/main/default/objects/Items_Google_Drive_Test_Data_Source__x/fields/DownloadUrl__c.field-meta.xml
<CustomField>
    <fullName>DownloadUrl__c</fullName>
    <externalDeveloperName>DownloadUrl</externalDeveloperName>
    <label>DownloadUrl</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Url</type>
</CustomField>