force-app/main/default/objects/Items_Google_Drive_Test_Data_Source__x/fields/IsFolder__c.field-meta.xml
<CustomField>
    <fullName>IsFolder__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsFolder</externalDeveloperName>
    <label>IsFolder</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>