force-app/main/default/objects/Items_Google_Drive_Test_Data_Source__x/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <externalDeveloperName>ParentId</externalDeveloperName>
    <label>ParentId</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>