force-app/main/default/objects/Items_Google_Drive_Test_Data_Source__x/fields/UpdateDate__c.field-meta.xml
<CustomField>
    <fullName>UpdateDate__c</fullName>
    <externalDeveloperName>UpdateDate</externalDeveloperName>
    <label>UpdateDate</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>